--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,29 @@
-data/*
 data/excel
 data/processed
-data/log
-data/deposit
+data/_tmp
+data/rejected
+data/master
+log
 legacy*
 dataset.md
 deploy-test.sh
 data-example
 node_modules
 yarn*
+node/darwin-core/create*
+.babelrc
+vocab
+node/*.mjs
+todo*
+issues.txt
+*_ch
+web/*.html
+web/*.*
+web/data
+web/external
+solr
+*firebase*
+*.lock
+package-lock.json
+.nyc_output
+coverage
